# VERON_NEPVEUX_GRAPH_SOLVER

VERON_NEPVEUX_PROJET/: README.md  pyproject.toml
VERON_NEPVEUX_PROJET/tests/: test_conversion.py  test_probleme.py  test_resolution.py  test_veron_nepveux_projet.py
VERON_NEPVEUX_PROJET/tests/htmlcov/: __init___py.html  d_684d4628fd0dffb8___init___py.html  d_684d4628fd0dffb8_lib_conversion_py.html  d_684d4628fd0dffb8_lib_probleme_py.html  d_684d4628fd0dffb8_lib_resolution_py.html  index.html  status.json  test_conversion_py.html  test_probleme_py.html  test_resolution_py.html  test_veron_nepveux_projet_py.html
VERON_NEPVEUX_PROJET/veron_nepveux_projet/: __main__.py  lib_conversion.py  lib_probleme.py  lib_resolution.py
