[tool.poetry]
name = "VERON_NEPVEUX_PROJET"
version = "0.1.0"
description = "Module permettant la résolution de différents problèmes problèmes de flux maximal sur des graphes orientés à poids"
authors = ["Mathieu <mathieuveron@outlook.fr>, Baptiste <baptiste.nepveux@icloud.com>"]

[tool.poetry.dependencies]
python = "3.10"
scipy = "^1.8.0"
rich = "^12.4.1"
typer = "^0.4.1"
serde = "^0.8.1"
jsonpickle = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
